apps/base/media-service/uptime-kuma/config/uptimekuma-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma-ingress
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: uptime.${SECRET_INT_DOMAIN}
    hajimari.io/icon: simple-icons:uptimekuma
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - uptime.${SECRET_INT_DOMAIN}
     secretName: prod-uptime-${SECRET_INT_CERT_DOMAIN}
  rules:
    - host: "uptime.${SECRET_INT_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-service
                port:
                  number: 3001
---
    apiVersion: cert-manager.io/v1
    kind: Certificate
    metadata:
      name: uptime.${SECRET_INT_DOMAIN}
      namespace: monitoring
    spec:
      secretName: prod-uptime-${SECRET_INT_CERT_DOMAIN}
      issuerRef:
        name: letsencrypt-production
        kind: ClusterIssuer
      commonName: "uptime.${SECRET_INT_DOMAIN}"
      dnsNames:
      - "uptime.${SECRET_INT_DOMAIN}"
